--- a/_sass/components/_wrapper.scss
+++ b/_sass/components/_wrapper.scss
@@ -16,4 +16,22 @@
 	display: flex;
 	align-items: center;
 	margin: 0 auto;
+
+
+}
+
+.wrapper-about {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	margin: 0 auto;
+
+	@media (max-width: 696px) {
+		height: auto;
+		// min-height: 100vh;
+
+		justify-content: center;
+	}
+
 }
